--- a/style/main.css
+++ b/style/main.css
@@ -753,8 +753,8 @@ margin-bottom: 55px;
 	border:4px solid #ffff;
 	border-radius: 20%;
 	position: absolute;
-	top: 30%;
-    right: 40%;
+	top: 20%;
+    right: 30%;
 	background-color: #396CAA;
 	padding-top: 20px;
 	padding-bottom: 30px;
@@ -782,8 +782,13 @@ margin-bottom: 55px;
 	margin-top: 25px;
 	border-radius: 60px;
 	cursor: pointer;
+	font-weight:700;
 }
-
+.pop-up button:hover{
+-webkit-box-shadow: inset 0px 0px 10px 3px rgba(0,0,0,0.46);
+-moz-box-shadow: inset 0px 0px 10px 3px rgba(0,0,0,0.46);
+box-shadow: inset 0px 0px 10px 3px rgba(0,0,0,0.46);
+}
 .pop-up  img{
 	width :20px;
 	height: 20px;
