--- a/style/main.css
+++ b/style/main.css
@@ -783,6 +783,7 @@ margin-bottom: 55px;
 	border-radius: 60px;
 	cursor: pointer;
 	font-weight:700;
+	border: 1px solid #ffff;
 }
 .pop-up button:hover{
 -webkit-box-shadow: inset 0px 0px 10px 3px rgba(0,0,0,0.46);
